<resources>
    <string name="app_name">Vocabulens</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_practice">Practice</string>
    <string name="underline">/ɪˈstæb.lɪʃ/</string>
    <string name="add">Add</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_import">Import</string>
    <string name="word_amount">%1$d words</string>
    <string name="example_amount">%1$d examples</string>
    <string name="action_search">Search</string>
    <string name="action_delete">Delete</string>
    <string name="action_share">Share</string>
    <string name="action_delete_note">Delete Note</string>
    <string name="delete">Delete</string>
    <string name="mark">Mark</string>
    <string name="move">Move</string>
    <string name="edit">Edit</string>
    <string name="delete_word">Delete word</string>
    <string name="action_sort">Sort</string>
    <string name="save">Save</string>
    <string name="action_filter">Filter</string>
    <string name="trash">Trash</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="start">Start</string>
    <string name="next">Continue</string>
    <string name="correct_d">Correct: %1$d</string>
    <string name="wrong_d">Incorrect: %1$d</string>
    <string name="correct_answer_s">Correct answer: %1$s</string>
    <string name="your_answer_s">Your answer: %1$s</string>
    <string name="quiz_completed">Quiz Completed</string>
    <string name="scan">Scan</string>
    <string name="scan_result">Scan result (%1$d)</string>
    <string name="scan_word">%1$s (%2$s)</string>
    <string name="save_all">Save all</string>
    <string name="save_s">Save %1$d</string>
    <string name="clear_selection">Clear selection</string>
    <string name="detect_language">Detect language</string>
    <string name="or">"  or  "</string>
    <string name="action_restore">Restore</string>
    <string name="action_empty_trash">Empty Trash</string>
    <string name="action_delete_forever">Delete Forever</string>
    <string name="export">Export</string>
    <string name="shared_notes">Shared Notes</string>
    <string name="shared_note_lang">%1$s / %2$s</string>
    <string name="shared_note_updated_at">Updated at %1$s</string>
    <string name="action_save">Save</string>
    <string name="backup_amp_restore"><![CDATA[Backup & restore]]></string>
    <string name="export_amp_import"><![CDATA[Export & import]]></string>
    <string name="language_translations"><![CDATA[Language & translations]]></string>
    <string name="english">English</string>
    <string name="note_lang">%1$s / %2$s</string>
    <string name="language">App Language</string>
    <string name="translations">Translate word to</string>
    <string name="lang_info">The translation model is stored on the device; you will download it first, and the app size will increase.</string>
    <string name="translation_info">This setting also changes when you change the destination language in the scan feature and the meaning language in new notes.</string>
    <string name="downloaded_language_model">Downloaded language model</string>
    <string name="google_translate_saved_translations">Google Translate saved translations (.xlsx)</string>
    <string name="vocabulens_custom">Vocabulens custom (.xlsx, .csv)</string>
    <string name="create">Create</string>
    <string name="vocabulens_search_bar">Search and Scan</string>
    <string name="open_scan">Open scan</string>
    <string name="word">Word</string>
    <string name="meaning">Meaning</string>
    <string name="update_available">New version of the app is available!</string>
    <string name="update_downloaded">An update has been downloaded. Please restart to apply.</string>
    <string name="failed_to_check_for_updates">Failed to check for updates</string>
    <string name="delete_account">This will also delete all your shared notes and backed up data. Are you sure you want to delete your account?</string>
    <string name="unshare">Unshare</string>
    <string name="menu_anki">Anki</string>
    <string name="send_info">Total number of words to be sent: %1$d\n\nWords without definition: %2$d\nWords with definition: %3$d</string>
    <string name="deck_info">*Anki deck names are unique, so make sure no two note titles are the same.</string>
    <!-- Open Source Licenses -->
    <string name="open_source_title">Open Source Licenses</string>
    <!-- Free Dictionary API Attribution -->
    <string name="free_dictionary_attribution">
        This app uses the Free Dictionary API provided by meetDeveloper.\n\n
        API documentation and source are available at:\n
        https://github.com/meetDeveloper/freeDictionaryAPI
    </string>
    <!-- AnkiDroid Attribution -->
    <string name="anki_attribution">
        This app uses the AnkiDroid API, licensed under the GNU Lesser General Public License (LGPL).\n\n
        API documentation and source are available at:\n
        https://github.com/ankidroid/Anki-Android
    </string>
    <string name="about">About</string>
    <string name="dropdown_title">%1$s (%2$s - %3$s)</string>
    <string name="dropdown_info">
        Total number of words to be sent: %1$d\n\n
        Words without definition: %2$d\n
        Words with definition: %3$d\n
        Words to be updated: %4$d
    </string>
</resources>