<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_scan" />
        <item
            android:id="@+id/nav_practice"
            android:icon="@drawable/baseline_menu_book_24"
            android:title="@string/menu_practice" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/baseline_share_24"
            android:title="@string/shared_notes" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/baseline_delete_24"
            android:title="@string/trash" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/action_settings" />
    </group>

</menu>