<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/outline_filter_alt_24"
        android:orderInCategory="1"
        android:title="@string/action_filter"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/baseline_sort_24"
        android:orderInCategory="2"
        android:title="@string/action_sort"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/outline_edit_24"
        android:orderInCategory="10"
        android:title="@string/edit"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/baseline_share_24"
        android:orderInCategory="11"
        android:title="@string/action_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_note"
        android:icon="@drawable/baseline_delete_outline_24"
        android:orderInCategory="12"
        android:title="@string/action_delete_note"
        app:showAsAction="never" />

</menu>