<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_mark"
        android:icon="@drawable/outline_star_border_24"
        android:orderInCategory="11"
        android:title="@string/mark"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/outline_edit_24"
        android:orderInCategory="11"
        android:title="@string/edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete_word"
        android:icon="@drawable/baseline_delete_outline_24"
        android:orderInCategory="11"
        android:title="@string/delete_word"
        app:showAsAction="never" />

</menu>