<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/baseline_search_24"
        android:orderInCategory="1"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_import"
        android:icon="@drawable/outline_upload_file_24"
        android:orderInCategory="2"
        android:title="@string/action_import"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/baseline_sort_24"
        android:orderInCategory="9"
        android:title="@string/action_sort"
        app:showAsAction="ifRoom" />
</menu>